Weekly table - new drivers also is updating.

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -610,27 +610,27 @@
                         </div>
                         <div class="col-sm-1">
                             <div class="row">חולים      <div class="dsb_hl_legend_header" style="background-color: rgb(153, 102, 255)"></div> </div>
-                            <div class="row" id="dsb_hl_weekly_tbl_curr_pats"> --            </div>
-                            <div class="row" id="dsb_hl_weekly_tbl_prev_pats">--</div>
-                            <div class="row" id="dsb_hl_weekly_tbl_2wks_ago_pats"> --        </div>
+                            <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_curr_pats"> --            </div>
+                            <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_prev_pats">--</div>
+                            <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_2wks_ago_pats"> --        </div>
                         </div>
                         <div class="col-sm-1">
                             <div class="row">הסעות         <div class="dsb_hl_legend_header" style="background-color: rgb(75, 192, 192)"></div>   </div>
-                            <div class="row" id="dsb_hl_weekly_tbl_curr_rides"> --            </div>
-                            <div class="row" id="dsb_hl_weekly_tbl_prev_rides">--</div>
-                            <div class="row" id="dsb_hl_weekly_tbl_2wks_ago_rides"> --        </div>
+                            <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_curr_rides"> --            </div>
+                            <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_prev_rides">--</div>
+                            <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_2wks_ago_rides"> --        </div>
                         </div>
                         <div class="col-sm-1">
                             <div class="row">מתנדבים      <div class="dsb_hl_legend_header" style="background-color: rgb(255, 159, 64)"></div>      </div>
-                            <div class="row" id="dsb_hl_weekly_tbl_curr_vols">  --           </div>
-                            <div class="row" id="dsb_hl_weekly_tbl_prev_vols">--</div>
-                            <div class="row" id="dsb_hl_weekly_tbl_2wks_ago_vols"> --        </div>
+                            <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_curr_vols">  --           </div>
+                            <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_prev_vols">--</div>
+                            <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_2wks_ago_vols"> --        </div>
                         </div>
                         <div class="col-sm-1">
                             <div class="row">מתנדבים חדשים          </div>
-                            <div class="row" id="dsb_hl_weekly_tbl_curr_new">--             </div>
-                            <div class="row" id="dsb_hl_weekly_tbl_prev_new">--</div>
-                            <div class="row" id="dsb_hl_weekly_tbl_2wks_ago_new">--         </div>
+                            <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_curr_new">--             </div>
+                            <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_prev_new">--</div>
+                            <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_2wks_ago_new">--         </div>
                         </div>
                         <div class="col-sm-3">
                             &nbsp;
