--- a/Road to Recovery/pages/viewCandidates.html
+++ b/Road to Recovery/pages/viewCandidates.html
@@ -57,8 +57,9 @@
 
     <!-- this page assets -->
     <link href="assets/css/viewCandidates.css" rel="stylesheet" type="text/css" />
-    <script src="assets/js/viewCandidates.js"></script>
     <script src="assets/js/documentedCalls.js"></script>
+    <script src="assets/js/documentedRides.js"></script>
+    <script src="assets/js/viewCandidates.js"></script>
 </head>
 
 
@@ -385,7 +386,8 @@
     </div>
 
     <footer id="rights" data-toggle="tooltip" data-placement="top" title="© All rights reserved The Road to Recovery.  جميع الحقوق محفوظة لجمعية الطريق الى الشفاء" class="footer text-right"></footer>
+    
     <div class="modal fade" id="DocumentedCallsModal" tabindex="-1" role="dialog" aria-labelledby="DocumentedCallsTitle" aria-hidden="true"></div>
-
+    <div class="modal fade" id="documentedRidesModal" tabindex="-1" role="dialog" aria-labelledby="documentedRidesTitle" aria-hidden="true"></div>
 </body>
 </html>
